--- a/html/Buchung/Neu.html
+++ b/html/Buchung/Neu.html
@@ -1,17 +1,127 @@
 ﻿
+<style>
+    /* The switch - the box around the slider */
 
+    /* Colors
+        Danger      #DC3545
+        Success     #28A745
+            */
+
+    .switch {
+        position: relative;
+        display: inline-block;
+        width: 60px;
+        height: 34px;
+    }
+
+        /* Hide default HTML checkbox */
+        .switch input {
+            opacity: 0;
+            width: 0;
+            height: 0;
+        }
+
+    /* The slider */
+    .slider {
+        position: absolute;
+        cursor: pointer;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: #DC3545;
+        -webkit-transition: .4s;
+        transition: .4s;
+    }
+
+        .slider:before {
+            position: absolute;
+            content: "";
+            height: 20px;
+            width: 20px;
+            left: 3px;
+            bottom: 4px;
+            background-color: white;
+            -webkit-transition: .4s;
+            transition: .4s;
+        }
+
+    input:checked + .slider {
+        background-color: #28A745;
+    }
+
+    input:focus + .slider {
+        box-shadow: 0 0 1px #28A745;
+    }
+
+    input:checked + .slider:before {
+        -ms-transform: translateX(32px);
+        transform: translateX(32px);
+    }
+
+    /* Rounded sliders */
+    .slider.round {
+        border-radius: 36px;
+        margin-top: 5px;
+        border: 1px solid white;
+        border-collapse: collapse;
+    }
+
+        .slider.round:before {
+            border-radius: 50%;
+        }
+
+    body {
+        // text-align: center;
+        justify-content: center;
+        align-items: center;
+        // background: #FAD9DC;
+    }
+
+    .btn.btn-danger {
+        width: 160px;
+    }
+
+        .btn.btn-danger.short {
+            width: 50px;
+        }
+
+    .btn.btn-success {
+        width: 160px;
+    }
+
+        .btn.btn-success.short {
+            width: 50px;
+        }
+
+
+    #id_DIV_Buchung_VERLAUF {
+        position: relative;
+        top: -30px;
+        max-height: 500px;
+    }
+
+    .tab-content.charts {
+        position: relative;
+        top: 0px;
+    }
+
+
+</style>
 
 <div class="container">
+
     <div class="input-group input-group-lg">
         <div class="input-group-prepend">
             <button type="button" id="btn_datum" class="btn btn-danger">Datum</button>
         </div>
         <input type="date" class="form-control" id="inputDate" placeholder="JJJJ/MM/TT" onchange="changeDate(this.value);">
     </div>
+
     <br />
     <div class="input-group input-group-lg">
         <div class="input-group-prepend">
-            <button type="button" id="btn_kategorie" class="btn btn-danger">Kategorie</button> 
+            <button type="button" id="btn_kategorie" class="btn btn-danger">Kategorie</button>
         </div>
         <select class="custom-select" id="inputKategorie">
             <option>Auswählen</option>
@@ -46,7 +156,7 @@
     <button id="id_btn_buchen" type="button" data-toggle="modal" data-target="#exampleModalCenter" class="btn btn-danger btn-lg" onclick="check_buchung();">Prüfen</button>
 </div>
 
-    <!-- Modal -->
+<!-- Modal -->
 <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
@@ -79,7 +189,7 @@
             </div>
 
             <div class="modal-footer">
-                <button type="button" id="btn_modal_buchen" class="btn btn-danger"  onclick="buchenNEU();" data-dismiss="modal">Buchen</button>
+                <button type="button" id="btn_modal_buchen" class="btn btn-danger" onclick="buchenNEU();" data-dismiss="modal">Buchen</button>
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Abbrechen</button>
             </div>
         </div>
@@ -97,20 +207,21 @@
     var currBezeichnung = "";
     var currKategorieID = "";
     var currKategorieText = "";
-    var vartoggleMenue = "0";
+    var vartoggleMenue = "1";
 
     //Document Ready
 
     function toggleSidebar() {
         $('#sidebar').toggleClass('visible')
+
     }
 
     $(document).ready(function () {
-        console.log("ready!");
-
-
+        console.log("Buchung Neu ready!");
+        $("#id_header_button").empty();
+        $("#id_header_button").append("<label class='switch'><input type='checkbox' onclick='toggleMode();'><span class='slider round'></span></label>");
+        toggleMode();
         getCategories();
-
 
         var today = new Date();
         var dd = String(today.getDate()).padStart(2, '0');
@@ -180,6 +291,11 @@
             $('#id_btn_buchen').removeClass("btn btn-danger btn-lg").addClass("btn btn-success btn-lg");
             $('#btn_modal_buchen').removeClass("btn btn-danger").addClass("btn btn-success");
 
+
+
+
+            $("#id_header_title").html("Neue Einzahlung");
+
         } else {
             //navbars
             $('#id_navbar').removeClass("navbar navbar-dark bg-success").addClass("navbar navbar-dark bg-danger");
@@ -196,6 +312,9 @@
             $('#btn_bezeichnung').removeClass("btn btn-success").addClass("btn btn-danger");
             $('#id_btn_buchen').removeClass("btn btn-success btn-lg").addClass("btn btn-danger btn-lg");
             $('#btn_modal_buchen').removeClass("btn btn-success").addClass("btn btn-danger");
+
+
+            $("#id_header_title").html("Neue Abbuchung");
 
         }
 
@@ -223,7 +342,7 @@
     }
 
     function check_buchung() {
-        
+
         $('#modal_date').html(currDate);
         $('#modal_kategorie').html("ID: " + currKategorieID + "<br>Name: " + currKategorieText);
         $('#modal_betrag').html(currBetrag + "€");
